CE-167 Interp4j is a string interpolation library for Java