@@ -24,7 +24,7 @@
     </modules>
 
     <properties>
-        <oap.project.version>25.0.3</oap.project.version>
+        <oap.project.version>25.1.0</oap.project.version>
 
         <maven.compiler.release>25</maven.compiler.release>
         <encoding>UTF-8</encoding>
@@ -44,6 +44,9 @@
         <oap.deps.maven.compiler.version>3.14.0</oap.deps.maven.compiler.version>
         <oap.deps.maven.enforcer.version>3.6.1</oap.deps.maven.enforcer.version>
         <min.maven.version>3.6.3</min.maven.version>
+
+        <oap.deps.lombook.version>1.18.46</oap.deps.lombook.version>
+        <oap.deps.interp4j-processor.version>2.0.0_jre21</oap.deps.interp4j-processor.version>
     </properties>
 
     <distributionManagement>
@@ -76,13 +79,33 @@
                 <version>${oap.deps.maven.compiler.version}</version>
                 <configuration>
                     <useIncrementalCompilation>true</useIncrementalCompilation>
+                    <fork>true</fork>
                     <compilerArgs>
                         <arg>-parameters</arg>
                         <arg>-Xlint:unchecked</arg>
                         <arg>--add-modules</arg>
                         <arg>java.xml,java.compiler</arg>
                         <arg>-proc:full</arg>
+
+                        <arg>-Xplugin:interp4j</arg>
+
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
                     </compilerArgs>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>dev.khbd.interp4j</groupId>
+                            <artifactId>interp4j-processor</artifactId>
+                            <version>${oap.deps.interp4j-processor.version}</version>
+                        </path>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>${oap.deps.lombook.version}</version>
+                        </path>
+                    </annotationProcessorPaths>
                 </configuration>
             </plugin>
             <plugin>
@@ -183,7 +206,6 @@
                 <configuration>
                     <configLocation>https://raw.githubusercontent.com/oaplatform/oap-maven/master/.idea/checkstyle.xml
                     </configLocation>
-                    <encoding>UTF-8</encoding>
                     <consoleOutput>true</consoleOutput>
                     <failsOnError>true</failsOnError>
                     <linkXRef>false</linkXRef>
